# dreamport-desktop

./: .gitignore  README.md  README_EN.md  dreamport.py  dreamport_gui.py  oscar.py  oscar_gui.py  pyproject.toml  requirements.txt
DreamPort.app/Contents/: Info.plist
DreamPort.app/Contents/Frameworks/: apple_health_to_oscar  libcrypto.1.1.dylib  libffi.7.dylib  libformw.6.dylib  libhistory.8.1.dylib  libmenuw.6.dylib  libncursesw.6.dylib  libpanelw.6.dylib  libpython3.9.dylib  libreadline.8.1.dylib  libsqlite3.0.dylib  libssl.1.1.dylib  libtbb.12.dylib  libtcl8.6.dylib  libtinfow.6.dylib  libz.1.2.12.dylib  tzdata
DreamPort.app/Contents/Frameworks/PIL/__dot__dylibs/: libjpeg.62.4.0.dylib
DreamPort.app/Contents/MacOS/: DreamPort
DreamPort.app/Contents/Resources/: libz.1.2.12.dylib  oscar_icon.icns
DreamPort.app/Contents/_CodeSignature/: CodeResources
scripts/: archive_dist.py  build_app.py  prepare_icons.py
src/apple_health_to_oscar/: __init__.py  __main__.py  app_paths.py  cli.py  engine.py  gui.py  i18n.py  options.py  settings_store.py  timezones.py  version.py
src/apple_health_to_oscar/resources/: timezones.json
src/apple_health_to_oscar/resources/locales/: af.json  bg.json  de.json  el.json  en.json  es.json  fr.json  he.json  hi.json  id.json  it.json  ja.json  ko.json  ms.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  th.json  tr.json  uk.json  vi.json  zh-Hans.json  zh-Hant.json
tests/: test_engine_regression.py  test_i18n_and_timezones.py
tests/fixtures/: sample_export.xml
(+13 files in other folders)
