[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-health-to-oscar"
version = "0.1.0"
description = "DreamPort: Apple Health sleep export to OSCAR Dreem/ZEO CSV converter with CLI and Tkinter GUI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tzdata>=2024.1"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apple_health_to_oscar = [
  "resources/*.json",
  "resources/locales/*.json",
]
